2013-03-24  Wolfgang Lux  <wolfgang.lux@gmail.com>

    * STCompiler.m (-compileMethod:): Follow Smalltalk convention to
    return the receiver from a method without an explicit return
    statement.

2013-03-24  Wolfgang Lux  <wolfgang.lux@gmail.com>

    * STExecutionContext.h: Change type of instruction pointer attribute
    to NSUInteger.
    * STExecutionContext.m (-invalidate, -isValid): Invalidate an
    execution context by setting its instruction pointer to NSNotFound.

    * STMethodContext.m (-invalidate, -isValid):
    * STBlockContext.m (-invalidate, -isValid): Delete method
    implementations so that the method and home context attributes of a
    method context and block context, respectively, are not destroyed when
    the method or block returns.

    Together these changes make it possible to use blocks even after the
    method containing their definition has returned.

2013-03-24  Wolfgang Lux  <wolfgang.lux@gmail.com>

    * Externs.h (STInterpreterReturnException):
    * Externs.m (STInterpreterReturnException):
    * STCompiler.m (-compileStatements:blockFlag:):
    * STBytecodeInterpreter.m (-interpretMethod:forReceiver:arguments:
    	-returnValue:, -returnBlockValue:, -dispatchBytecode:):
    An explicit return statement in a block returns from the method
    context containing the block's definition. This is achieved by
    throwing a STInterpreterReturnException.

    * STBlock.m (-handler:): Don't let user code handle
    STInterpreterReturnException.

    * STBytecodeInterpreter.m (-interpret): Fix incorrect logging levels.

2013-03-23  Wolfgang Lux  <wolfgang.lux@gmail.com>

    * STCompiler.m (-compileStatements:blockFlag:): Fix compiler bug: The
    value of a Smalltalk statement sequence is the value of its last
    statement and not that of the first.

2013-03-23  Wolfgang Lux  <wolfgang.lux@gmail.com>

    * STBlock.m (-initWithInterpreter:...):
    * STBlockContext.m (initWithInterpreter:initialIP:stackSize:):